tests/parser/bad/exps/exp_t-at-spid-tid-with.scilexp
let a = tfun 'A => True in
(* accidental period *)
tfun 'B => @a 'B .
